--- a/my-app/src/components/App/App.css
+++ b/my-app/src/components/App/App.css
@@ -17,10 +17,11 @@ body {
     border: 2px;
     font-family: Tahoma, Arial, sans-serif;
     color: #0b0c0c;
-    padding: 0 150px;
-    padding-left: 30px;
-    padding-right: 30px;
-    /* letter-spacing: 30px; */
+    /* padding: 0 150px; */
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 120px;
+
 }
 
 .background{
