--- a/my-app/src/components/Item/Item.css
+++ b/my-app/src/components/Item/Item.css
@@ -1,12 +1,12 @@
 .task-table-row {
     width: 100%;
-    height: 70px;
+    height: 120px;
     border-bottom: 1px solid #000;
     margin-bottom: 10px;
     padding-bottom: 10px;
     display: flex;
-    /* justify-content: space-around; */
     align-items: center;
+    letter-spacing: 6px;
   }
   
 .remove {
@@ -26,7 +26,19 @@
 }
 
 .checkbox {
-    margin-right: 50px;
+    margin-right: 30px;
+	--size: 30px;
+	display: block;
+	width: var(--size);
+	height: var(--size);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	background: var(--bg);
+    border: none;
+	box-shadow: rgba(159, 159, 179, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgb(20, 20, 20) 0px -2px 6px 0px inset;
+	cursor: pointer;
 }
 
 h1{
@@ -45,3 +57,7 @@ h1{
     margin-left: auto;
 }
 
+h6 {
+    line-height-step: 30px;
+    font-size: 25px;
+}
