--- a/my-app/src/components/App/App.css
+++ b/my-app/src/components/App/App.css
@@ -20,8 +20,8 @@ body {
     /* padding: 0 150px; */
     padding-left: 100px;
     padding-right: 100px;
-    padding-bottom: 120px;
-
+    padding-bottom: 100px;
+    font-size: 5px;
 }
 
 .background{
