--- a/my-app/src/components/Item/Item.css
+++ b/my-app/src/components/Item/Item.css
@@ -1,6 +1,6 @@
 .task-table-row {
     width: 100%;
-    height: 120px;
+    height: 160%;
     border-bottom: 1px solid #000;
     margin-bottom: 10px;
     padding-bottom: 10px;
@@ -8,17 +8,26 @@
     align-items: center;
     letter-spacing: 6px;
   }
+
+  h6,
+  .h6 {
+    margin-top: -2px;
+    font-size: 18px;
+    line-height: 15px;
+    color: rgb(37, 72, 73);
+}
   
 .remove {
     position: relative;
-    width: 175px;
+    width: 135px;
     margin: 20px;
-    font-size: 25px;
-    height: 45px;
+    font-size: 18px;
+    height: 35px;
     border: none;
     color: rgb(11, 11, 14);
     background-color: rgb(238, 118, 130);
     margin-left: auto;
+    letter-spacing: 10px;
 }
 
 .list-items {
@@ -27,7 +36,7 @@
 
 .checkbox {
     margin-right: 30px;
-	--size: 30px;
+	--size: 20px;
 	display: block;
 	width: var(--size);
 	height: var(--size);
@@ -47,17 +56,14 @@ h1{
 
 .edit {
     position: relative;
-    width: 110px;
+    width: 90px;
     margin: 20px;
-    font-size: 25px;
-    height: 45px;
+    font-size: 18px;
+    height: 35px;
     border: none;
     color: rgb(11, 11, 14);
     background-color: rgb(207, 187, 238);
     margin-left: auto;
+    letter-spacing: 10px;
 }
 
-h6 {
-    line-height-step: 30px;
-    font-size: 25px;
-}
