--- a/my-app/src/components/App/App.css
+++ b/my-app/src/components/App/App.css
@@ -4,12 +4,12 @@ body {
     flex-direction:column; 
     justify-content:center;
     /* letter-spacing: 30px; */
-    background-image: url('https://wallpapercave.com/wp/wp4551786.jpg');
-  }
+    background-image: url('https://wallpaperxyz.com/wp-content/uploads/Simple-Wallpaper-Full-HD-Free-Download-Desktop-PC-Laptop-Wallpaperxyz.com-3.png');
+}
 
   .background {
-          background-image: url('https://wallpapercave.com/wp/wp4551786.jpg');
-  }
+    background-image: url('https://wallpaperxyz.com/wp-content/uploads/Simple-Wallpaper-Full-HD-Free-Download-Desktop-PC-Laptop-Wallpaperxyz.com-3.png');
+}
 
 
 .container {
