--- a/my-app/src/components/TaskManager/TaskManager.css
+++ b/my-app/src/components/TaskManager/TaskManager.css
@@ -38,8 +38,7 @@
   }
 
   #name-input{
-    background: linear-gradient(90deg, rgba(206,215,237,1) 0%, rgba(169,223,228,1) 0%, rgba(165,202,245,1) 0%, rgba(189,217,233,1) 23%, rgba(167,209,230,1) 38%, rgba(175,207,238,1) 58%, rgba(219,218,232,1) 100%);
-    font-size: 22px;
+    background: linear-gradient(90deg, rgba(224,229,244,1) 28%, rgba(234,238,242,1) 61%, rgba(237,240,241,1) 98%, rgba(228,237,238,1) 100%, rgba(226,234,244,1) 100%, rgba(216,227,240,1) 100%, rgba(236,236,241,1) 100%);    font-size: 22px;
     margin: 10px auto;
     height: 2.3rem;
     border: none;
@@ -47,7 +46,9 @@
   }
 
   #description-input1{
-    background: linear-gradient(90deg, rgba(206,215,237,1) 0%, rgba(169,223,228,1) 0%, rgba(165,202,245,1) 0%, rgba(189,217,233,1) 23%, rgba(167,209,230,1) 38%, rgba(175,207,238,1) 58%, rgba(219,218,232,1) 100%);
+    background: linear-gradient(90deg, rgba(224,229,244,1) 28%, rgba(234,238,242,1) 61%, rgba(237,240,241,1) 98%, rgba(228,237,238,1) 100%, rgba(226,234,244,1) 100%, rgba(216,227,240,1) 100%, rgba(236,236,241,1) 100%);
+    border: none;
+    outline: none;
     font-size: 22px;
     margin: 10px auto;
     height: 2.3rem;
@@ -56,7 +57,9 @@
   }
 
   #assignedTo-input{
-    background: linear-gradient(90deg, rgba(206,215,237,1) 0%, rgba(169,223,228,1) 0%, rgba(165,202,245,1) 0%, rgba(189,217,233,1) 23%, rgba(167,209,230,1) 38%, rgba(175,207,238,1) 58%, rgba(219,218,232,1) 100%);
+    background: linear-gradient(90deg, rgba(224,229,244,1) 28%, rgba(234,238,242,1) 61%, rgba(237,240,241,1) 98%, rgba(228,237,238,1) 100%, rgba(226,234,244,1) 100%, rgba(216,227,240,1) 100%, rgba(236,236,241,1) 100%);
+    border: none;
+    outline: none;
     font-size: 22px;
     margin: 10px auto;
     height: 2.3rem;
@@ -64,7 +67,9 @@
     box-shadow: rgba(159, 159, 179, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgb(20, 20, 20) 0px -2px 6px 0px inset;  }
 
   #date-input{
-    background: linear-gradient(90deg, rgba(206,215,237,1) 0%, rgba(169,223,228,1) 0%, rgba(165,202,245,1) 0%, rgba(189,217,233,1) 23%, rgba(167,209,230,1) 38%, rgba(175,207,238,1) 58%, rgba(219,218,232,1) 100%);
+    background: linear-gradient(90deg, rgba(224,229,244,1) 28%, rgba(234,238,242,1) 61%, rgba(237,240,241,1) 98%, rgba(228,237,238,1) 100%, rgba(226,234,244,1) 100%, rgba(216,227,240,1) 100%, rgba(236,236,241,1) 100%);
+    border: none;
+    outline: none;
     font-size: 22px;
     margin: 10px auto;
     height: 2.3rem;
@@ -91,7 +96,7 @@
   }
 
   .col-12 {
-    background: linear-gradient(90deg, rgba(206,215,237,1) 0%, rgba(169,223,228,1) 0%, rgba(205,224,245,1) 0%, rgba(189,217,233,1) 23%, rgba(219,212,242,1) 38%, rgba(214,231,249,1) 58%, rgba(219,218,232,1) 100%);
+    background: linear-gradient(90deg, rgba(224,229,244,1) 28%, rgba(234,238,242,1) 61%, rgba(237,240,241,1) 98%, rgba(228,237,238,1) 100%, rgba(226,234,244,1) 100%, rgba(216,227,240,1) 100%, rgba(236,236,241,1) 100%);
     font-size: 22px;
     margin: 10px auto;
     height: 2.3rem;
