--- a/my-app/src/components/App/App.css
+++ b/my-app/src/components/App/App.css
@@ -4,11 +4,13 @@ body {
     flex-direction:column; 
     justify-content:center;
     /* letter-spacing: 30px; */
-    background-image: url('https://wallpaperxyz.com/wp-content/uploads/Simple-Wallpaper-Full-HD-Free-Download-Desktop-PC-Laptop-Wallpaperxyz.com-3.png');
+    background-image: url("https://images.wallpaperscraft.com/image/single/starry_sky_tree_night_sky_119989_1920x1080.jpg");
+    /* background-image: url('https://wallpaperxyz.com/wp-content/uploads/Simple-Wallpaper-Full-HD-Free-Download-Desktop-PC-Laptop-Wallpaperxyz.com-3.png'); */
 }
 
   .background {
-    background-image: url('https://wallpaperxyz.com/wp-content/uploads/Simple-Wallpaper-Full-HD-Free-Download-Desktop-PC-Laptop-Wallpaperxyz.com-3.png');
+          background-image: url("https://images.wallpaperscraft.com/image/single/starry_sky_tree_night_sky_119989_1920x1080.jpg");
+    /* background-image: url('https://wallpaperxyz.com/wp-content/uploads/Simple-Wallpaper-Full-HD-Free-Download-Desktop-PC-Laptop-Wallpaperxyz.com-3.png'); */
 }
 
 
@@ -20,7 +22,7 @@ body {
     /* padding: 0 150px; */
     padding-left: 100px;
     padding-right: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 80px;
     font-size: 5px;
 }
 
@@ -35,4 +37,8 @@ body {
 
   .top-bar{
     justify-content: space-between;
+  }
+
+  .dark-mode {
+    font-size: 30px;
   }
