--- a/my-app/src/components/Item/Item.css
+++ b/my-app/src/components/Item/Item.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 160%;
     border-bottom: 1px solid #000;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     padding-bottom: 10px;
     display: flex;
     align-items: center;
@@ -13,7 +13,7 @@
   .h6 {
     margin-top: -2px;
     font-size: 18px;
-    line-height: 15px;
+    line-height: 30px;
     color: rgb(37, 72, 73);
 }
   
@@ -36,7 +36,7 @@
 
 .checkbox {
     margin-right: 30px;
-	--size: 20px;
+	--size: 30px;
 	display: block;
 	width: var(--size);
 	height: var(--size);
